fix wallet dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -438,6 +438,9 @@ body.dark-theme{
     background-color: #161D32FF;
     box-shadow: 0px 8px 16px 0px rgb(255 255 255 / 11%);
   }
+  .card-d-b {
+    color: $dark;
+  }
   .coin-info .title{
     color: rgba(255, 255, 255, 0.48) !important;
   }
